--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -104,6 +104,11 @@ li {
 	margin-top: 16px;
 }
 
+.mb-8 {
+	margin-bottom: 8px !important;
+
+}
+
 .mb-16 {
 	margin-bottom: 16px;
 }
@@ -112,8 +117,21 @@ li {
 	margin-top: 32px;
 }
 
+.mb-24 {
+	margin-bottom: 24px;
+	;
+}
+
 .mb-12 {
 	margin-bottom: 12px;
+}
+
+.mw-100 {
+	max-width: 100%;
+}
+
+.mb-0 {
+	margin-bottom: 0 !important;
 }
 
 .count {
@@ -1602,31 +1620,6 @@ li {
 				}
 			}
 		}
-
-		.select-block {
-			select {
-				padding: 4px 20px 4px 8px;
-				border: 1px solid #313955;
-				font-style: normal;
-				font-weight: 400;
-				font-size: 14px;
-				line-height: 17px;
-				color: #313955;
-				-webkit-appearance: none;
-				-moz-appearance: none;
-				background: transparent;
-				background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
-				background-repeat: no-repeat;
-				background-position-x: 100%;
-				border-radius: 4px;
-				cursor: pointer;
-
-				&:focus {
-					outline: none;
-				}
-
-			}
-		}
 	}
 
 	.prem-stats-wrapper {
@@ -1755,6 +1748,21 @@ li {
 		}
 	}
 
+	.main-common-sub-title {
+		font-style: normal;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 17px;
+		color: #1A202C;
+		margin-bottom: 8px;
+		;
+
+		@include mq(max_md) {
+			font-size: 13px;
+			line-height: 15px;
+		}
+	}
+
 	.main-common-content {
 		background: #FFFFFF;
 		/* Gray:300 */
@@ -1770,6 +1778,11 @@ li {
 			border-radius: 0;
 			background-color: transparent;
 		}
+	}
+
+	.main-common-squad {
+		padding: 12px;
+		background-color: #fff;
 	}
 
 	.right-common-content {
@@ -2562,7 +2575,6 @@ li {
 }
 
 .content-tab-only-for-pc {
-	display: block;
 
 	@include mq(max_md) {
 		display: none;
@@ -2850,4 +2862,409 @@ li {
 	color: #1A202C;
 	margin-bottom: 8px;
 	;
+}
+
+.common-player-salary-all-table {
+	width: 100%;
+	height: auto;
+
+	.table-row {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: 10px;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 17px;
+		/* identical to box height */
+
+
+		/* Gray:900 */
+
+		color: #1A202C;
+	}
+
+	.table-footer {
+		border-top: 1px solid #EDF2F7;
+		padding-top: 10px;
+		margin-bottom: 0 !important;
+
+		.value {
+			font-weight: 500 !important;
+		}
+	}
+}
+
+.common-player-salary-table-wrapper {
+	width: 100%;
+
+	@include mq(max_md) {
+		max-width: 93vw;
+		overflow: auto;
+		padding-bottom: 4px;
+	}
+
+	.column-35 {
+		width: 35%;
+	}
+
+	.column-5 {
+		width: 5%;
+	}
+
+	.column-15 {
+		width: 15%;
+	}
+
+	.table-heading {
+		padding: 14px 20px;
+		display: flex;
+		align-items: center;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 14px;
+		text-align: center;
+		/* Gray:600 */
+
+		color: #718096;
+
+		@include mq(max_md) {
+			font-weight: 400;
+			font-size: 11px;
+			line-height: 13px;
+			padding: 13px 12px;
+			min-width: 846px;
+		}
+	}
+
+	.main-heading {
+		background: #EDF2F7;
+	}
+
+	.sub-heading {
+		background: #E2E8F0;
+		font-style: normal;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 17px;
+		/* identical to box height */
+
+
+		/* Gray:900 */
+
+		color: #1A202C;
+		padding: 12px 20px;
+
+		@include mq(max_md) {
+			font-weight: 500;
+			font-size: 13px;
+			line-height: 15px;
+			padding: 12px;
+			min-width: 846px;
+		}
+	}
+
+	.txt-highlight {
+		color: #3AC5C9;
+	}
+
+	.common-player-table {
+		width: 100%;
+		margin-bottom: 16px;
+
+		.table-row {
+			padding: 12px 12px;
+			display: flex;
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 17px;
+			color: #1A202C;
+			text-align: center;
+			border-bottom: 1px solid #EDF2F7;
+
+			@include mq(max_md) {
+				padding: 12px;
+				font-weight: 400;
+				font-size: 13px;
+				line-height: 15px;
+				min-width: 846px;
+			}
+		}
+	}
+
+	.player-wrapper {
+		display: flex;
+		align-items: center;
+
+		.player-image {
+			min-width: 32px;
+			max-width: 32px;
+			height: 32px;
+			border: none;
+			border-radius: 50%;
+			margin-right: 12px;
+		}
+
+
+		.player-info {
+			display: flex;
+			flex-direction: column;
+		}
+
+		.player-name {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			max-width: 250px;
+			margin-bottom: 2px;
+
+			@include mq(max_md) {
+				max-width: 200px;
+			}
+		}
+
+		.player-description {
+			font-style: normal;
+			font-weight: 400;
+			font-size: 12px;
+			line-height: 14px;
+
+			/* Gray:600 */
+
+			color: #718096;
+
+			@include mq(max_md) {
+				font-size: 11px;
+				font-weight: 400;
+				line-height: 13px;
+			}
+		}
+	}
+
+}
+
+.player-salary-description {
+	margin-top: 32px;
+
+	@include mq(max_md) {
+		margin-top: 36px;
+	}
+
+	ul {
+
+		li {
+			font-style: normal;
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 20px;
+			/* or 143% */
+
+
+			/* Gray:900 */
+
+			color: #1A202C;
+			margin-bottom: 24px;
+
+			@include mq(max_md) {
+				font-weight: 400;
+				font-size: 13px;
+				line-height: 20px;
+				/* or 154% */
+			}
+
+			.title {
+				font-weight: 500;
+				margin-top: 2px;
+			}
+		}
+
+	}
+}
+
+.common-player-wrapper {
+	display: flex;
+	align-items: center;
+
+	.player-image {
+		min-width: 32px;
+		max-width: 32px;
+		height: 32px;
+		border: none;
+		border-radius: 50%;
+		margin-right: 12px;
+	}
+
+
+	.player-info {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.player-name {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		max-width: 250px;
+		margin-bottom: 2px;
+
+		@include mq(max_md) {
+			max-width: 200px;
+		}
+	}
+
+	.player-description {
+		font-style: normal;
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 14px;
+
+		/* Gray:600 */
+
+		color: #718096;
+
+		@include mq(max_md) {
+			font-size: 11px;
+			font-weight: 400;
+			line-height: 13px;
+		}
+	}
+}
+
+
+.select-block {
+	select {
+		padding: 4px 20px 4px 8px;
+		border: 1px solid #313955;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 17px;
+		color: #313955;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		background: transparent;
+		background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+		background-repeat: no-repeat;
+		background-position-x: 100%;
+		border-radius: 4px;
+		cursor: pointer;
+
+		&:focus {
+			outline: none;
+		}
+
+	}
+}
+
+.champion-tab-header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 32px;
+
+	@include mq(max_md) {
+		margin-bottom: 22px;
+	}
+
+	.box-select-time-wrapper {
+		display: flex;
+		align-items: center;
+
+		.label {
+			font-style: normal;
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 17px;
+			color: #1A202C;
+			margin-right: 8px;
+
+			@include mq(max_md) {
+				font-size: 13px;
+				line-height: 15px;
+
+			}
+		}
+	}
+}
+
+.common-list-champion-wrapper {
+	.txt-hightlight {
+		color: #3AC5C9;
+		margin-left: 2px;;
+	}
+
+	.champion-header-title {
+		font-style: normal;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 17px;
+		color: #1A202C;
+		padding-bottom: 10px;
+		border-bottom: 1px solid #EDF2F7;
+
+		@include mq(max_md) {
+			font-size: 13px;
+			line-height: 15px;
+		}
+	}
+
+	.list-champion-cup {
+		width: 100%;
+		height: auto;
+		padding: 32px 0px 0px;
+		display: flex;
+		flex-wrap: wrap;
+		margin-bottom: 10px;
+
+		.champion-cup-item {
+			width: calc(100% / 7);
+			height: auto;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			margin-bottom: 32px;
+			;
+
+			@include mq(max_md) {
+				width: calc(100% / 3);
+				margin-bottom: 24px;
+			}
+		}
+
+		.cup-item {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+
+			.cup-image {
+				min-width: 50px;
+				max-width: 50px;
+				height: 50px;
+				object-fit: cover;
+				margin-bottom: 16px;
+			}
+
+			.time {
+				font-weight: 400;
+				font-size: 14px;
+				line-height: 17px;
+				/* identical to box height */
+
+				text-align: center;
+
+				/* Gray:900 */
+
+				color: #1A202C;
+
+				@include mq(max_md) {
+					font-size: 13px;
+					line-height: 15px;
+				}
+			}
+
+		}
+	}
 }
