--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1773,7 +1773,7 @@ li {
 		margin-bottom: 16px;
 
 		@include mq(max_md) {
-			padding: 16px 0px;
+			padding: 0 0 16px 0px;
 			border: none;
 			border-radius: 0;
 			background-color: transparent;
@@ -3192,7 +3192,8 @@ li {
 .common-list-champion-wrapper {
 	.txt-hightlight {
 		color: #3AC5C9;
-		margin-left: 2px;;
+		margin-left: 2px;
+		;
 	}
 
 	.champion-header-title {
@@ -3265,6 +3266,57 @@ li {
 				}
 			}
 
+		}
+	}
+}
+
+.common-season-statistics-content-wrapper {
+	display: flex;
+
+	@include mq(max_md) {
+		flex-direction: column;
+	}
+
+	.column {
+		width: 50%;
+		height: auto;
+		padding-right: 80px;
+
+		@include mq(max_md) {
+			padding-right: 0;
+			width: 100%;
+		}
+	}
+
+	.list-season-statistics-table {
+		width: 100%;
+	}
+
+	.season-statistics-table-item {
+		margin-bottom: 24px;;
+		.title {
+			font-style: normal;
+			font-weight: 500;
+			font-size: 16px;
+			line-height: 19px;
+			color: #1A202C;
+			margin-bottom: 12px;
+		}
+
+		.table-content {
+			width: 100%;
+		}
+
+		.table-row {
+			font-style: normal;
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 17px;
+			color: #1A202C;
+			display: flex;
+			justify-content: space-between;
+			padding: 10px 0px;
+			border-bottom: 1px solid #EDF2F7;
 		}
 	}
 }
