--- a/css/league.css
+++ b/css/league.css
@@ -110,6 +110,11 @@
   justify-content: center;
   align-items: center;
 }
+@media only screen and (max-width: 991px) {
+  .club-page-wrapper .club-visual-match-wrapper {
+    max-width: 95vw;
+  }
+}
 .club-page-wrapper .club-visual-match {
   width: 542px;
   height: 550px;
@@ -118,6 +123,13 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+}
+@media only screen and (max-width: 991px) {
+  .club-page-wrapper .club-visual-match {
+    width: 100%;
+    height: 350px !important;
+    max-height: 350px;
+  }
 }
 .club-page-wrapper .club-visual-match .visual-line {
   position: absolute;
@@ -130,23 +142,55 @@
   top: 67px;
   left: 0;
 }
+@media only screen and (max-width: 991px) {
+  .club-page-wrapper .club-visual-match .visual-line:nth-of-type(1) {
+    top: 22px;
+  }
+}
 .club-page-wrapper .club-visual-match .visual-line:nth-of-type(2) {
   top: 95px;
   left: 0;
   justify-content: space-between;
-  padding: 0px 150px;
+  padding: 0px 100px;
+}
+@media only screen and (max-width: 991px) {
+  .club-page-wrapper .club-visual-match .visual-line:nth-of-type(2) {
+    padding: 0px 50px;
+    top: 50px;
+  }
 }
 .club-page-wrapper .club-visual-match .visual-line:nth-of-type(3) {
   top: 204px;
   left: 0;
 }
+@media only screen and (max-width: 991px) {
+  .club-page-wrapper .club-visual-match .visual-line:nth-of-type(3) {
+    top: 130px;
+  }
+}
 .club-page-wrapper .club-visual-match .visual-line:nth-of-type(4) {
   top: 333px;
   left: 0;
 }
+@media only screen and (max-width: 991px) {
+  .club-page-wrapper .club-visual-match .visual-line:nth-of-type(4) {
+    top: 200px;
+  }
+  .club-page-wrapper .club-visual-match .visual-line:nth-of-type(4) .player-item {
+    margin-right: 20px;
+  }
+  .club-page-wrapper .club-visual-match .visual-line:nth-of-type(4) .player-item:last-of-type {
+    margin-right: 0;
+  }
+}
 .club-page-wrapper .club-visual-match .visual-line:nth-of-type(5) {
   top: 446px;
   left: 0;
+}
+@media only screen and (max-width: 991px) {
+  .club-page-wrapper .club-visual-match .visual-line:nth-of-type(5) {
+    top: 280px;
+  }
 }
 .club-page-wrapper .club-visual-match .player-item {
   display: flex;
@@ -154,6 +198,11 @@
   justify-content: center;
   align-items: center;
   margin-right: 88px;
+}
+@media only screen and (max-width: 991px) {
+  .club-page-wrapper .club-visual-match .player-item {
+    margin-right: 34px;
+  }
 }
 .club-page-wrapper .club-visual-match .player-item:last-of-type {
   margin-right: 0;
