--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -166,6 +166,10 @@ li {
 	color: #0DC66D !important;
 }
 
+.txt-uppercase {
+	text-transform: uppercase;
+}
+
 .bd-top {
 	border-top: 1px solid #EDF2F7;
 }
@@ -1793,6 +1797,7 @@ li {
 	}
 
 	#league-tabs,
+	#footballer-tabs,
 	#club-tabs {
 		position: relative;
 		top: -54px;
@@ -2726,6 +2731,7 @@ li {
 		overflow: auto;
 		padding-bottom: 4px;
 	}
+
 	.table-heading {
 		display: flex;
 		background: #EDF2F7;
@@ -3283,6 +3289,22 @@ li {
 				}
 			}
 
+			.label {
+				font-style: normal;
+				font-weight: 400;
+				font-size: 12px;
+				line-height: 14px;
+				color: #718096;
+				margin-top: 4px;
+				display: inline-block;
+
+				@include mq(max_md) {
+					font-size: 11px;
+					line-height: 13px;
+					margin-top: 2px;
+				}
+			}
+
 		}
 	}
 }
@@ -3310,7 +3332,9 @@ li {
 	}
 
 	.season-statistics-table-item {
-		margin-bottom: 24px;;
+		margin-bottom: 24px;
+		;
+
 		.title {
 			font-style: normal;
 			font-weight: 500;
@@ -3342,7 +3366,7 @@ li {
 	width: 100%;
 	height: auto;
 
-	.transfer-table-title  {
+	.transfer-table-title {
 		font-style: normal;
 		font-weight: 500;
 		font-size: 14px;
@@ -3366,6 +3390,7 @@ li {
 		color: #718096;
 		margin-left: 4px;
 	}
+
 	.column-10 {
 		width: 10%;
 	}
@@ -3393,7 +3418,7 @@ li {
 		width: 30%;
 
 		@include mq(max_md) {
-		  width: 100%;
+			width: 100%;
 		}
 	}
 
@@ -3401,7 +3426,7 @@ li {
 		width: 50%;
 
 		@include mq(max_md) {
-		  width: 100%;
+			width: 100%;
 			margin-top: 10px;
 		}
 	}
@@ -3415,8 +3440,10 @@ li {
 			top: 10px;
 		}
 	}
+
 	.column-time {
 		width: 10%;
+
 		@include mq(max_md) {
 			display: none !important;
 		}
@@ -3429,13 +3456,16 @@ li {
 		line-height: 17px;
 		padding: 12px 0px;
 		color: #1A202C;
-		display: flex;;
-	  position: relative;
+		display: flex;
+		;
+		position: relative;
 		border-bottom: 1px solid #EDF2F7;
+
 		@include mq(max_md) {
 			flex-direction: column;
 		}
 	}
+
 	.txt-highlight {
 		color: #3AC5C9
 	}
@@ -3469,6 +3499,7 @@ li {
 
 	.club-1 {
 		justify-content: flex-end;
+
 		.club-image {
 			margin-left: 8px;
 		}
@@ -3498,5 +3529,120 @@ li {
 		display: flex;
 		justify-content: center;
 		align-items: center;
+	}
+}
+
+.common-footballer-right-sidebar-block {
+	.list-property-footballer {
+		li {
+			display: flex;
+			align-items: center;
+			font-style: normal;
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 22px;
+			color: #1A202C;
+			margin-bottom: 10px;
+
+			&:last-of-type {
+				margin-bottom: 0;
+			}
+
+			@include mq(max_md) {
+				font-size: 13px;
+				line-height: 18px;
+			}
+
+			.dot {
+				width: 3px;
+				height: 3px;
+				background-color: #1A202C;
+				border: none;
+				border-radius: 50%;
+				margin: 0px 10px;
+			}
+		}
+	}
+}
+
+.common-player-salary-table {
+	width: 100%;
+
+	@include mq(max_md) {
+		max-width: 95vw;
+		overflow: auto;
+	}
+
+
+	.column-15 {
+		width: 15%;
+	}
+
+	.column-20 {
+		width: 20%;
+	}
+
+	.column-5 {
+		width: 5%;
+	}
+	.column-10 {
+		width: 10%;
+	}
+
+	.column-25 {
+		width: 25%;
+	}
+	.column-30 {
+		width: 30%;
+	}
+
+	.table-heading {
+		display: flex;
+		padding: 13px 12px;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 14px;
+		color: #718096;
+		background-color: #EDF2F7;
+
+		@include mq(max_md) {
+			font-size: 11px;
+			line-height: 13px;
+			min-width: 846px;
+		}
+
+	}
+
+	.table-row {
+		display: flex;
+		padding: 20px 12px;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 17px;
+		color: #1A202C;
+		border-bottom: 1px solid #EDF2F7;
+
+		@include mq(max_md) {
+			font-size: 13px;
+			line-height: 15px;
+			min-width: 846px;
+		}
+	}
+
+	.txt-overflow {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		display: inline-block;
+	}
+
+	.mw-180 {
+		max-width: 180px;
+	}
+
+	.mw-100 {
+		max-width: 100px;
 	}
 }
