--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -110,7 +110,7 @@ li {
 }
 
 .mb-16 {
-	margin-bottom: 16px;
+	margin-bottom: 16px !important;
 }
 
 .mt-32 {
@@ -3585,6 +3585,7 @@ li {
 	.column-5 {
 		width: 5%;
 	}
+
 	.column-10 {
 		width: 10%;
 	}
@@ -3592,6 +3593,7 @@ li {
 	.column-25 {
 		width: 25%;
 	}
+
 	.column-30 {
 		width: 30%;
 	}
@@ -3644,5 +3646,244 @@ li {
 
 	.mw-100 {
 		max-width: 100px;
+	}
+}
+
+.common-list-select-box {
+	display: flex;
+	align-items: center;
+	margin-bottom: 12px;
+
+
+	.seclect-box-item {
+		margin-right: 8px;
+
+		&:last-of-type {
+			margin-right: 0;
+		}
+	}
+}
+
+.footballer-page-wrapper {
+	.prem-stats-wrapper {
+		max-width: fit-content;
+	}
+}
+
+.common-player-table {
+	.column-10 {
+		width: 10%;
+	}
+	.column-15 {
+		width: 15%;
+	}
+	.column-25 {
+		width: 25%;
+	}
+
+	.column-20 {
+		width: 20%;
+	}
+
+	.column-40 {
+		width: 40%;
+	}
+
+	.column-50 {
+		width: 50%;
+	}
+
+
+	.title-header {
+		padding: 12px;
+		font-style: normal;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 17px;
+		/* identical to box height */
+
+
+		/* Gray:900 */
+
+		color: #1A202C;
+		background: #F7FAFC;
+	}
+
+	.league-name-stats-table {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		max-width: 215px;;
+	}
+	.team-wrapper {
+		display: flex;
+		align-items: center;
+
+		.team-image {
+			min-width: 20px;
+			max-width: 20px;
+			height: 20px;
+			border: none;
+			border-radius: 50%;
+			object-fit: cover;
+			margin-right: 8px;
+		}
+
+		.team-name {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			max-width: 130px;
+		}
+	}
+
+	.table-heading {
+		padding: 13px 12px;
+		background: #EDF2F7;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 14px;
+		color: #718096;
+	}
+
+	.table-row {
+		padding: 12px 12px 10px 12px;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 17px;
+		align-items: center;
+		color: #1A202C;
+		border-bottom: 1px solid #EDF2F7;
+		;
+	}
+
+
+	.league-info {
+		flex-direction: column;
+		display: flex;
+	}
+	.league-name {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		display: inline-block;
+		max-width: 165px;
+	}
+
+	.time {
+		font-style: normal;
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 14px;
+		color: #718096;
+		display: inline-block;
+		margin-top: 2px;
+	}
+
+	.txt-highlight {
+		font-style: normal;
+		font-weight: 600;
+		font-size: 14px;
+		line-height: 17px;
+		/* identical to box height */
+
+		text-align: center;
+
+		/* #3AC5C9 */
+
+		color: #3AC5C9;
+	}
+
+	.list-club-wrapper {
+		width: 100%;
+		height: auto;
+		display: flex;
+		justify-content: center;
+
+		.club-item {
+			display: flex;
+			align-items: center;
+		}
+
+		.club-image {
+			min-width: 20px;
+			max-width: 20px;
+			height: 20px;
+			border: none;
+			border-radius: 50%;
+			object-fit: cover;
+		}
+
+		.club-name {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			max-width: 100%;
+			max-width: 120px;
+		}
+		.score {
+			display: flex;
+			justify-content: center;
+			min-width: 60px;
+			max-width: 60px;
+		}
+
+		.club-1 {
+			justify-content: flex-end;
+
+			@include mq(max_md) {
+				justify-content: space-between;
+			}
+
+			.club-image {
+				margin-left: 8px;
+
+				@include mq(max_md) {
+					margin-left: 0;
+					margin-right: 8px;
+
+				}
+			}
+
+			.club-name {
+				direction: ltr;
+			}
+
+			.club-info {
+				@include mq(max_md) {
+					flex-direction: row-reverse;
+				}
+			}
+		}
+
+		.club-2 {
+			justify-content: flex-start;
+
+			@include mq(max_md) {
+				margin-top: 8px;
+				justify-content: space-between;
+				flex-direction: row-reverse;
+			}
+
+			.score {
+				margin-right: 40px;
+
+				@include mq(max_md) {
+					margin-right: 0;
+				}
+			}
+
+			.club-image {
+				margin-right: 8px;
+			}
+
+			.club-info {
+				@include mq(max_md) {
+					justify-content: space-between;
+				}
+			}
+		}
 	}
 }
